projects/vms/nginx-vm/fedora-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-vm
  name: nginx-vm-svc
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    vm.kubevirt.io/name: nginx-vm
  type: ClusterIP
