projects/vms/nginx-vm/fedora-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-vm
  namespace: vm-gitops
spec:
  path: /
  to:
    name: nginx-vm-svc
    weight: 100
    kind: Service
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  port:
    targetPort: http
